--- a/docs/12.configmap.secrets.md
+++ b/docs/12.configmap.secrets.md
@@ -4,6 +4,8 @@ Lanzar MariaDB ejecutando el siguiente script:
 
 ```bash
 kubectl run mariadb --image=mariadb --env MYSQL_ROOT_PASSWORD=my-password
+
+kubectl exec -it mariadb-deployment-1-fc75f956-f5zlt -- mysql -u root -p
 ```
 
 La opción utilizando manifiestos sería:
