--- a/docs/13.deployments.md
+++ b/docs/13.deployments.md
@@ -5,13 +5,19 @@
 Levantar un ReplicaSet:
 
 ```bash
-...
+cd src/13/
+
+kubectl create -f replica.set.yml
 ```
 
-Atención! Los ReplicaSet se hacen cargo de todos los pods independientes que cumplan con el selector indicado en la configuración:
+¡Atención! Los ReplicaSet se hacen cargo de todos los pods independientes que cumplan con el selector indicado en la configuración:
 
 ```bash
 cd src/13/
+
+kubectl create -f warning.pod.yml
+
+kubectl create -f warning.rs.yml
 ```
 
 ## Deployment
@@ -20,7 +26,8 @@ Lanzar un deployment con 2 réplicas automáticamente creará un ReplicaSet:
 
 ```bash
 cd src/13/
-....
+
+kubectl create -f deployment.yml
 ```
 
 ## Actualización de un Deployment
@@ -38,13 +45,14 @@ kubectl exec -it (kubectl get pods | grep Running | awk '{print $1}' | head -1) 
 
 kubectl apply -f updatable.deployment.yml
 kubectl get pods
-kubectl exec -it (kubectl get pods | grep Running | awk '{print $1}' | head -1) ```
+kubectl exec -it (kubectl get pods | grep Running | awk '{print $1}' | head -1)
+```
 
 Para ver el historial del Deployment, ejecutar:
 
 ```bash
 kubectl rollout history deploy nginx-deployment
-``````
+```
 
 Para hacer rollback, ejecutar:
 
