--- a/docs/15.statefulset.md
+++ b/docs/15.statefulset.md
@@ -1,5 +1,7 @@
 # StatefulSets
 
+## Base de datos como StatefulSet sobre PersistentVolume
+
 Para ejecutar un StatefulSet, debemos asegurarnos que existan volúmenes físicos que podamos montar en los pods.
 
 Provisionar los almacenamientos:
@@ -11,6 +13,13 @@ mkdir -p /tmp/data/vol1 /tmp/data/vol2
 Ejecutar el StatefulSet:
 
 ```bash
-cd src/14/
-.....
+cd src/15/
+
+kubectl create -f persistent.volumes.yml
+
+kubectl create -f persistent.volume.claim.yml
+
+kubectl create -f mariadb.secret.yml
+
+kubectl create -f mariadb.statefulset.yml
 ```
